working on jwt config